# FCScoreServer

./: .dockerignore  Dockerfile  app.py  config.py  create_example.py  create_examples.py  gunicorn.conf.py  gunicorn_config.py  logging.conf  main.py  mdef.json  pyproject.toml  readme.md  requirements.txt  requirements_pyodide.txt  setup.cfg  wsgi.py
api/: __init__.py  funcs.py
api/examples/: M.json  align_M.json  align_fTrn.json  align_h8L.json  align_hB.json  align_hB2.json  align_hSqL.json  align_hSqLC.json  align_iSp.json  align_loop.json  align_pImm.json  align_rEt.json  align_rollC.json  align_sFin.json  align_sqL.json  align_tHat.json  align_trgle.json  align_upL.json  fTrn.json  h8L.json  hB.json  hB2.json  hSqL.json  hSqLC.json  iSp.json  keys.json  loop.json  pImm.json  rEt.json  rollC.json  sFin.json  score_M.json  score_fTrn.json  score_h8L.json  score_hB.json  score_hB2.json  score_hSqL.json  score_hSqLC.json  score_iSp.json  score_loop.json  (+13 more)
app/: app.py  funcs.py  log_parser.py
app/examples/: M.json  fTrn.json  h8L.json  hB.json  hB2.json  hSqL.json  hSqLC.json  iSp.json  loop.json  pImm.json  rEt.json  rollC.json  sFin.json  sqL.json  tHat.json  trgle.json  upL.json
artur/: score_capabilities.js  score_manoeuvre.js
fcscore/: log_parser.py  logs.py  routes.py  schemas.py
fcscore/schemas/: __init__.py  artur.py  fcj.py  pfc.py
server/: main.py  schemas.py
tests/: conftest.py  test_log_parsing.py  test_routes.py  test_schemas.py
tests/data/: sLoop_complete.json  sqL.json
